<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="title_habits">Habits</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_habit_detail">Habit Details</string>
    <string name="title_add_habit">Add Habit</string>
    <string name="title_edit_habit">Edit Habit</string>
    
    <!-- Habit related strings -->
    <string name="habit_name">Habit Name</string>
    <string name="habit_description">Description</string>
    <string name="habit_frequency">Frequency</string>
    <string name="habit_reminder">Set Reminder</string>
    <string name="habit_color">Color</string>
    <string name="habit_start_date">Start Date</string>
    
    <!-- Button texts -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    
    <!-- Frequency options -->
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="custom">Custom</string>
    
    <!-- Statistics -->
    <string name="completion_rate">Completion Rate</string>
    <string name="streak">Current Streak</string>
    <string name="longest_streak">Longest Streak</string>
    
    <!-- Settings -->
    <string name="notification_settings">Notification Settings</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="data_settings">Data Settings</string>
    <string name="about">About</string>
</resources>
